[project]
name = "cangjie-build"
version = "0.1.0"
description = "Engineered build pipeline for the Cangjie SDK (Linux x64 native + Windows x64 cross-compile)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "cangjie-build contributors" }]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<15",
]

[project.scripts]
cangjie-build = "cangjie_build.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cangjie_build"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "ty>=0.0.1a13",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["ref", "workspace", "buildtools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["ref", "workspace", "buildtools"]

[tool.ty.environment]
python-version = "3.11"

[tool.pyright]
include = ["src", "tests"]
exclude = ["ref", "workspace", "buildtools", "**/__pycache__", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
